fixtures/errors/json_stringify_cycle_array.js
const value = [];
value[0] = value;

JSON.stringify(value);
